--- a/sample-dotnetcore-console-ef-bulk/sample-dotnetcore-console-ef-bulk/sample-dotnetcore-console-ef-bulk.csproj
+++ b/sample-dotnetcore-console-ef-bulk/sample-dotnetcore-console-ef-bulk/sample-dotnetcore-console-ef-bulk.csproj
@@ -29,6 +29,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.1" />
+    <PackageReference Include="Z.EntityFramework.Extensions.EFCore" Version="3.0.37" />
   </ItemGroup>
 
 </Project>
